[project]
name = "launch-generator"
version = "0.5.0"
description = "Simple launch file generator for ROS2."
authors = [
    { name = "Tatsuro Sakaguchi", email = "tatsuro.sakaguchi@g.softbank.co.jp" },
]
dependencies = ["launch", "launch_ros", "pyyaml"]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
